--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,24 +1,27 @@
 {
-   "background_page": "background.html",
-   "browser_action": {
-      "default_icon": "images/icon32.png",
-      "default_popup": "popup.html"
-   },
-   "content_scripts": [ {
-      "js": [ "js/inject.js" ],
-      "matches": [ "http://*/*", "https://*/*" ]
-   } ],
-   "description": "Download and manage torrents on a remote Transmission client.",
-   "icons": {
-      "128": "images/icon128.png",
-      "16": "images/icon16.png",
-      "32": "images/icon32.png",
-      "48": "images/icon48.png"
-   },
-   "minimum_chrome_version": "15",
-   "name": "Remote Transmission Plus",
-   "options_page": "options.html",
-   "permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ],
-   "update_url": "http://clients2.google.com/service/update2/crx",
-   "version": "0.9.6"
+	"manifest_version": 2,
+	"background": {
+		"page": "background.html"
+	},
+	"browser_action": {
+		"default_icon": "images/icon32.png",
+		"default_popup": "popup.html"
+	},
+	"content_scripts": [ {
+		"js": [ "js/inject.js" ],
+		"matches": [ "http://*/*", "https://*/*" ]
+	} ],
+	"description": "Download and manage torrents on a remote Transmission client.",
+	"icons": {
+		"128": "images/icon128.png",
+		"16": "images/icon16.png",
+		"32": "images/icon32.png",
+		"48": "images/icon48.png"
+	},
+	"minimum_chrome_version": "23",
+	"name": "Remote Transmission ++",
+	"options_page": "options.html",
+	"permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ],
+	"update_url": "http://clients2.google.com/service/update2/crx",
+	"version": "0.9.8"
 }
