--- a/source/manifest.json
+++ b/source/manifest.json
@@ -23,5 +23,6 @@
 	"options_page": "options.html",
 	"permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ],
 	"update_url": "http://clients2.google.com/service/update2/crx",
-	"version": "0.9.9.5"
+	"version": "0.9.9.5",
+	"config_version": 5
 }
