--- a/source/manifest.json
+++ b/source/manifest.json
@@ -24,5 +24,5 @@
 	"permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ],
 	"update_url": "http://clients2.google.com/service/update2/crx",
 	"version": "0.9.9.5",
-	"config_version": 5
+	"config_version": "5"
 }
