--- a/source/manifest.json
+++ b/source/manifest.json
@@ -22,6 +22,5 @@
 	"name": "Remote Transmission ++",
 	"options_page": "options.html",
 	"permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ],
-	"version": "0.9.9.9",
-	"config_version": "6"
+	"version": "0.9.9.9"
 }
