--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,4 +1,6 @@
 {
+	"name": "Remote Transmission ++",
+	"version": "1.0.3",
 	"manifest_version": 2,
 	"background": {
 		"page": "background.html"
@@ -8,7 +10,10 @@
 		"default_popup": "popup.html"
 	},
 	"content_scripts": [ {
-		"js": [ "js/inject.js" ],
+		"js": [
+			"js/jquery-2.2.0.min.js",
+			"js/inject.js"
+		],
 		"matches": [ "http://*/*", "https://*/*" ]
 	} ],
 	"description": "Download and manage torrents on a remote Transmission client.",
@@ -19,8 +24,6 @@
 		"48": "images/icon48.png"
 	},
 	"minimum_chrome_version": "23",
-	"name": "Remote Transmission ++",
 	"options_page": "options.html",
-	"permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ],
-	"version": "1.0.2"
+	"permissions": [ "http://*/", "https://*/", "contextMenus", "notifications", "tabs" ]
 }
